[tool.black]
line-length = 120

[tool.poetry]
name = "dontforget"
version = "0.1.0"
description = "Don't forget to do your chores (using Gmail, Toggl and more tools to come)"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "*"
click = "*"
memoized-property = "*"
arrow = "*"  # TODO: replace by pendulum
pendulum = "*"
marshmallow = "*"
todoist-python = "*"
togglCli = "*"
toml = "*"
environs = "*"
deprecated = "*"
python-redmine = "*"
autorepr = "*"
pluginbase = "*"
imbox = "*"
jmespath = "*"
rumps = "*"
apscheduler = "*"
appdirs = "*"
"ruamel.yaml" = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
keyring = "*"
#clib = { path = "../python-clib", develop = true }
clib = { git = "https://github.com/andreoliwa/python-clib.git", branch = "develop" }
maya = "*"
joblib = "*"

[tool.poetry.dependencies.pylint]
optional = true
version = "*"

[tool.poetry.scripts]
fo = "dontforget.cli:main"
dontforget = "dontforget.cli:main"
pipe = "dontforget.pipes:pipe"

[tool.poetry.dev-dependencies]
faker = "*"
coverage = "*"
factory-boy = "*"
pytest = "*"
pytest-cov = "*"
pytest-runfailed = "*"
pylint = "*"
ipython = "*"
ipdb = "*"


[tool.poetry.extras]
lint = ["pylint"]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
