[tool.black]
line-length = 120

[tool.poetry]
name = "dontforget"
version = "0.1.0"
description = "Don't forget to do your chores (using Gmail, Toggl and more tools to come)"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "*"
click = "*"
memoized-property = "*"
arrow = "*"  # TODO: replace by pendulum
pendulum = "*"
marshmallow = "*"
todoist-python = "*"
togglCli = "*"
toml = "*"
environs = "*"
deprecated = "*"
python-redmine = "*"
autorepr = "*"
pluginbase = "*"
imbox = "*"
jmespath = "*"
rumps = "*"
apscheduler = "*"
appdirs = "*"
"ruamel.yaml" = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
#clib = { path = "../python-clib", develop = true }
clib = { git = "https://github.com/andreoliwa/python-clib.git", branch = "develop" }
maya = "*"
joblib = "*"

[tool.poetry.dependencies.pylint]
optional = true
version = "*"

[tool.poetry.scripts]
dontforget = "dontforget.cli:main"
pipe = "dontforget.pipes:pipe"

[tool.poetry.dev-dependencies]
faker = "*"
coverage = "*"
factory-boy = "*"
pytest = "*"
pytest-cov = "*"
pytest-runfailed = "*"
pylint = "*"
ipython = "*"
ipdb = "*"

[tool.poetry.extras]
lint = ["pylint"]

[build-system]
# Support PEP 660 hooks
# https://github.com/python-poetry/poetry-core/pull/182#issuecomment-1005195851
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"
