[tool.black]
line-length = 120

[tool.poetry]
name = "dontforget"
version = "0.1.0"
description = "Don't forget to do your chores (using Gmail, Toggl and more tools to come)"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "==3.1.2"
click = "==8.1.7"
memoized-property = "==1.0.3"
arrow = "==1.3.0"  # TODO: replace by pendulum
pendulum = "==2.1.2"
marshmallow = "==3.20.1"
todoist-python = "==8.1.4"
togglCli = "==2.4.4"
toml = "==0.10.2"
environs = "==9.5.0"
deprecated = "==1.2.14"
python-redmine = "==2.4.0"
autorepr = "==0.3.0"
pluginbase = "==1.0.1"
imbox = "==0.9.8"
jmespath = "==1.0.1"
rumps = "==0.4.0"
apscheduler = "==3.10.4"
appdirs = "==1.4.4"
"ruamel.yaml" = "==0.18.5"
google-api-python-client = "==2.106.0"
google-auth-httplib2 = "==0.1.1"
google-auth-oauthlib = "==1.1.0"
#clib = { path = "../python-clib", develop = true }
clib = { git = "https://github.com/andreoliwa/python-clib.git", branch = "develop" }
maya = "==0.6.1"
joblib = "==1.3.2"

[tool.poetry.dependencies.pylint]
optional = true
version = "*"

[tool.poetry.scripts]
dontforget = "dontforget.cli:main"

[tool.poetry.dev-dependencies]
faker = "*"
coverage = "*"
factory-boy = "*"
pytest = "*"
pytest-cov = "*"
pytest-runfailed = "*"
pylint = "*"
ipython = "*"
ipdb = "*"

[tool.poetry.extras]
lint = ["pylint"]

[build-system]
# Support PEP 660 hooks
# https://github.com/python-poetry/poetry-core/pull/182#issuecomment-1005195851
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"
